# matrix-discovery

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  shell.nix
.github/workflows/: continuous_deployment.yml
sample-data/synthetic-log/: event_log_01.xes  event_log_04.xes  event_log_05.xes  event_log_06.xes  event_log_07.xes  event_log_08.xes  event_log_09.xes  event_log_10.xes  event_log_11.xes
sample-data/synthetic-logs-noise/: event_log_noise_01.xes  event_log_noise_02.xes  event_log_noise_03.xes  event_log_noise_04.xes  event_log_noise_05.xes  event_log_noise_06.xes  event_log_noise_07.xes  event_log_noise_08.xes  event_log_noise_09.xes  event_log_noise_10.xes  event_log_noise_11.xes
src/: epa.rs  evaluation.rs  event.rs  lib.rs  parser.rs  routes.rs  state.rs
src/dependency_types/: dependency.rs  existential.rs  temporal.rs
